--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ before_install:
     - pip install pytest pytest-cov
     - pip install coveralls
 script:
-    - pytest
+    - pytest --cov
 after_success:
     - coveralls
