necessary to move files for packaging reasons

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_install:
 install:
     - pip install -e .
 script:
-    - pytest --cov=src
+    - pytest --cov=src --ignore=src/data
 after_success:
     - coveralls
