--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
     - "3.6.1"
 before_install:
+    - pip install matplotlib
     - pip install scipy
     - pip install pytest pytest-cov
     - pip install coveralls
